# srtm_embedded

./: .gitignore  CHANGELOG.md  Cargo.toml  Readme.md  cliff.toml
.github/workflows/: bump.yml  release-plz.yml  release.yml  rust.yml
examples/: std_linux.rs
src/: coords.rs  lib.rs  resolutions.rs  tiles.rs
tests/: no_std_test.rs  std_test.rs
