[package]
name = "srtm_embedded"
version = "0.1.0"
edition = "2024"

[dependencies]

defmt = { version = "0.3.10", optional = true }
log = { version = "0.4.26", optional = true }
heapless = "0.8.0"

[dev-dependencies]
env_logger = "0.11.8"
[[example]]
name = "std_linux"
crate-type = ["bin"]

[features]
default = ["log"]
## Enable logging output using the `log` crate.
log = ["dep:log"]
defmt = ["dep:defmt"]
