[package]
name = "srtm-embedded"
version = "0.1.0"
edition = "2024"

license = "Apache-2.0"  # The license under which the package is distributed
description = "libary for reading srtm data. std and no-std. 0.5,1,3 Arc"  # A short description of the package
repository = "https://github.com/mwesterm/srtm_embedded"  # The URL of the package's source repository
categories = [
  "embedded",  # The package categories
  "no-std",
]
keywords = [  "embedded",  # The package categories
  "no-std",
  "std",
  "srmt",
  "GIS",
]  # Keywords for the package
readme = "README.md"  # The path to the README file



[dependencies]
heapless = "0.8.0"

[dev-dependencies]
log = { version = "0.4.26" }
env_logger = "0.11.8"
no_std_io = "0.6.0"

[[example]]
name = "std_linux"
crate-type = ["bin"]
